--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,7 @@
   <mat-icon style="color:white">local_fire_department</mat-icon>
   <span style="color:white">Magazzino Alessio</span>
 </mat-toolbar>
+
+<div class="body">
+  <router-outlet></router-outlet>
+</div>
