--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,26 +24,39 @@
         
             <!-- Position Column -->
             <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Nome attrezzo </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <th mat-header-cell style="justify-content: center;text-align: center;" *matHeaderCellDef> Nome attrezzo </th>
+            <td mat-cell style="justify-content: center;text-align: center;" *matCellDef="let element">{{element.name}}</td>
             </ng-container>
         
             <!-- Name Column -->
             <ng-container matColumnDef="quantity">
-            <th mat-header-cell *matHeaderCellDef> Quantità </th>
-            <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+            <th mat-header-cell style="justify-content: center;text-align: center;" *matHeaderCellDef> Quantità </th>
+            <td mat-cell style="justify-content: center;text-align: center;" *matCellDef="let element">{{element.quantity}} </td>
             </ng-container>
         
             <!-- Name Column -->
             <ng-container matColumnDef="last_update">
-            <th mat-header-cell *matHeaderCellDef> Ultima modifica </th>
-            <td mat-cell *matCellDef="let element"> {{element.last_update}} </td>
+            <th mat-header-cell style="justify-content: center;text-align: center;" *matHeaderCellDef> Ultima modifica </th>
+            <td mat-cell style="justify-content: center;text-align: center;" *matCellDef="let element"> {{element.last_update}} </td>
             </ng-container>
         
             <!-- Name Column -->
             <ng-container matColumnDef="last_user">
-            <th mat-header-cell *matHeaderCellDef> Ultimo utilizzatore </th>
-            <td mat-cell *matCellDef="let element"> {{element.last_user}} </td>
+            <th mat-header-cell style="justify-content: center;text-align: center;" *matHeaderCellDef> Ultimo utilizzatore </th>
+            <td mat-cell style="justify-content: center;text-align: center;" *matCellDef="let element"> {{element.last_user}} </td>
+            </ng-container>
+        
+            <!-- Name Column -->
+            <ng-container matColumnDef="missing">
+            <th mat-header-cell style="justify-content: center;text-align: center;" *matHeaderCellDef> Notifiche rifornimento </th>
+            <td mat-cell style="justify-content: center;text-align: center;" *matCellDef="let element">
+              <span *ngIf="element.quantity<=element.threshold">
+                <mat-icon style="color:red">report_problem</mat-icon>
+              </span>
+              <span *ngIf="element.quantity>element.threshold">
+                <mat-icon style="color:green">check_circle</mat-icon>
+              </span>
+            </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
