--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,6 +58,16 @@
               </span>
             </td>
             </ng-container>
+        
+            <!-- Name Column -->
+            <ng-container matColumnDef="delete">
+            <th mat-header-cell style="justify-content: center;text-align: center;" *matHeaderCellDef> Elimina </th>
+            <td mat-cell style="justify-content: center;text-align: center;" *matCellDef="let element">
+              <button (click)="deleteTool(element.name)" mat-icon-button style="color:red" aria-label="Example icon button with a delete icon">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+            </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
