--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -8,6 +8,11 @@
 </mat-form-field>
 
 <mat-form-field style="display: flex;justify-content: center;text-align: center;margin-top: 1rem;margin-left: auto;margin-right: auto;" appearance="fill">
+    <mat-label>Categoria</mat-label>
+    <input matInput [(ngModel)]="category">
+</mat-form-field>
+
+<mat-form-field style="display: flex;justify-content: center;text-align: center;margin-top: 1rem;margin-left: auto;margin-right: auto;" appearance="fill">
     <mat-label>Quantità</mat-label>
     <input matInput [(ngModel)]="quantity" type="number">
 </mat-form-field>
